# connectors-generic

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  test_macos.yml  test_ubuntu.yml  test_windows.yml
examples/: custom_connector_example.py  non_python_example.ipynb  temperatures.csv  temperatures.sh
simvue_connector/: __init__.py  connector.py
simvue_connector/extras/: common.py  create_command.py
simvue_integrations_template/: __init__.py  connector.py
simvue_integrations_template/extras/: common.py  create_command.py
tests/: conftest.py
tests/integration/: test_custom_connector.py
tests/unit/: test_abort_callback.py
